--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,10 @@
     <dimen name="smallText">16sp</dimen>
     <dimen name="middleText">20sp</dimen>
     <dimen name="bigText">24sp</dimen>
+
+    <!-- Icon Sie -->
+    <dimen name="smallIcon">20dp</dimen>
+    <dimen name="middleIcon">40dp</dimen>
+    <dimen name="bigIcon">80dp</dimen>
+
 </resources>
