--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -5,6 +5,8 @@
     android:layout_height="wrap_content"
     android:layout_marginStart="@dimen/bigMargin"
     android:layout_marginEnd="@dimen/bigMargin"
+    android:layout_marginBottom="@dimen/smallMargin"
+    android:backgroundTint="@color/backgroundItem"
     xmlns:tools="http://schemas.android.com/tools">
 
     <RelativeLayout
@@ -18,14 +20,14 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/smallMargin"
             android:layout_centerVertical="true"
-            android:textSize="@dimen/bigText"
+            android:textSize="@dimen/middleText"
             tools:text="@string/simpleTeamName" />
 
         <ImageView
             android:id="@+id/image"
             android:layout_width="@dimen/bigIcon"
             android:layout_height="@dimen/bigIcon"
-            android:layout_toEndOf="@id/viewName"
+            android:layout_alignParentEnd="true"
             android:layout_margin="@dimen/smallMargin"
             tools:src="@tools:sample/avatars"/>
 
