--- a/app/src/main/res/layout/player_item.xml
+++ b/app/src/main/res/layout/player_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:backgroundTint="@color/backgroundItemPlayer"
     android:layout_marginBottom="@dimen/bigMargin">
 
@@ -13,7 +13,17 @@
         <TextView
             android:id="@+id/viewName"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_toStartOf="@id/viewAvatar"
+            android:layout_alignParentStart="true"
+            tools:text="@tools:sample/full_names"/>
+
+        <ImageView
+            android:id="@+id/viewAvatar"
+            android:layout_width="@dimen/bigIcon"
+            android:layout_height="@dimen/bigIcon"
+            android:layout_alignParentEnd="true"
+            tools:src="@tools:sample/avatars"/>
 
     </RelativeLayout>
 
